# job-agent

./: README.md
_llm_prompts/: 000.context.md  001.python_crawler.md  002.core_database.md  003.intelligence_module.md  004.discover_companies.md
core/: deno.json  job-agent-core.db  readme.md  reset-db.sh  tsoa.json
core/src/: main.ts  server.ts
core/src/controllers/: candiateJobMatchesController.ts  candidatesController.ts  companiesController.ts  crawlController.ts  jobPostingsController.ts  predictController.ts  routes.ts  taskController.ts
core/src/db/: database.ts  models.ts
core/src/repositories/: candidateJobMatchRepository.ts  candidateRepository.ts  companyRepository.ts  jobPostRepository.ts
core/src/services/: candidateJobMatchesService.ts  candidateService.ts  companyService.ts  eventsService.ts  jobPostingsService.ts  predictionService.ts  workQueueService.ts
crawler/: README.md  example_usage.py  pyproject.toml
crawler/src/: core_client.py  main.py
crawler/src/job_crawler/: main.py
intelligence/: .env.example  .gitignore  README.md  main.py
intelligence/src/: core_client.py  main.py
intelligence/src/job_posting/: main.py
intelligence/src/jobs/: enhance_company.py  enhance_job_post.py  enrich_job_post.py  job_match.py
intelligence/src/match/: main.py
intelligence/src/scrapers/: companies_crawler.py  (+2 more)
intelligence_legacy/: .gitignore  README.md  main.py  pyproject.toml
intelligence_legacy/src/: core_client.py
trainer/: deno.json  generatePrompts.md
trainer/src/: main.ts
trainer/userspace/: dataset.json  prompt.md
(+19 files in other folders)
