[project]
name = "intelligence"
version = "0.1.0"
description = "AI/LLM intelligence module for job posting enhancement and matching"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "anthropic>=0.18.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]
